# rust-try-out

./: .gitignore  Cargo.toml  README.md
src/: main.rs
